--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,8 @@ android {
     buildTypes {
 
         debug{
-            buildConfigField "String", "BASE_URL", "\"http://13.232.32.249:8080/\""
-            buildConfigField "String", "CLEAN_URL", "\"13.232.32.249:8080\""
+            buildConfigField "String", "BASE_URL", "\"https://intelesafe.covidhelp.in/\"" // http://13.232.32.249:8080/
+            buildConfigField "String", "CLEAN_URL", "\"intelesafe.covidhelp.in\"" // 13.232.32.249:8080
         }
 
 
