--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,8 +32,8 @@ android {
                 disable 'MissingTranslation'
             }
             minifyEnabled true
-            buildConfigField "String", "BASE_URL", "\"http://13.232.32.249:8080/\""
-            buildConfigField "String", "CLEAN_URL", "\"13.232.32.249:8080\""
+            buildConfigField "String", "BASE_URL", "\"http://intelesafe.covidhelp.in/\"" // http://13.232.32.249:8080/
+            buildConfigField "String", "CLEAN_URL", "\"intelesafe.covidhelp.in\"" // 13.232.32.249:8080
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
