In app browser for PPE guidelines and FAQs redirection.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,9 +21,11 @@ android {
     }
     buildTypes {
 
-        debug{
-            buildConfigField "String", "BASE_URL", "\"http://intelesafe.covidhelp.in/\"" // http://13.232.32.249:8080/
-            buildConfigField "String", "CLEAN_URL", "\"intelesafe.covidhelp.in\"" // 13.232.32.249:8080
+        debug {
+            buildConfigField "String", "BASE_URL", "\"http://intelesafe.covidhelp.in/\""
+            // http://13.232.32.249:8080/
+            buildConfigField "String", "CLEAN_URL", "\"intelesafe.covidhelp.in\""
+            // 13.232.32.249:8080
         }
 
 
@@ -32,8 +34,10 @@ android {
                 disable 'MissingTranslation'
             }
             minifyEnabled true
-            buildConfigField "String", "BASE_URL", "\"http://intelesafe.covidhelp.in/\"" // http://13.232.32.249:8080/
-            buildConfigField "String", "CLEAN_URL", "\"intelesafe.covidhelp.in\"" // 13.232.32.249:8080
+            buildConfigField "String", "BASE_URL", "\"http://intelesafe.covidhelp.in/\""
+            // http://13.232.32.249:8080/
+            buildConfigField "String", "CLEAN_URL", "\"intelesafe.covidhelp.in\""
+            // 13.232.32.249:8080
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
