--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -225,7 +225,7 @@
 
         <meta-data
             android:name="firebase_crashlytics_collection_enabled"
-            android:value="false" />
+            android:value="true" />
         <provider
             android:name="org.intelehealth.intelesafe.activities.searchPatientActivity.SearchSuggestionProvider"
             android:authorities="org.intelehealth.intelesafe.activities.searchPatientActivity.SearchSuggestionProvider"
