Added test server

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,8 @@ android {
     buildTypes {
 
         debug{
-            buildConfigField "String", "BASE_URL", "\"http://intelesafe.covidhelp.in/\"" // http://13.232.32.249:8080/
-            buildConfigField "String", "CLEAN_URL", "\"intelesafe.covidhelp.in\"" // 13.232.32.249:8080
+            buildConfigField "String", "BASE_URL", "\"http://testintelesafe.covidhelp.in/\"" // http://13.232.32.249:8080/
+            buildConfigField "String", "CLEAN_URL", "\"testintelesafe.covidhelp.in\"" // 13.232.32.249:8080
         }
 
 
@@ -33,8 +33,8 @@ android {
                 checkReleaseBuilds false
             }
             minifyEnabled true
-            buildConfigField "String", "BASE_URL", "\"http://intelesafe.covidhelp.in/\"" // http://13.232.32.249:8080/
-            buildConfigField "String", "CLEAN_URL", "\"intelesafe.covidhelp.in\"" // 13.232.32.249:8080
+            buildConfigField "String", "BASE_URL", "\"http://testintelesafe.covidhelp.in/\"" // http://13.232.32.249:8080/
+            buildConfigField "String", "CLEAN_URL", "\"testintelesafe.covidhelp.in\"" // 13.232.32.249:8080
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
