--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,11 @@ android {
         //Test BASE_URL = http://testintelesafe.covidhelp.in/
         //Test CLEAN_URL = testintelesafe.covidhelp.in
 
-        debug{
-            buildConfigField "String", "BASE_URL", "\"http://testintelesafe.covidhelp.in/\"" // http://13.232.32.249:8080/
-            buildConfigField "String", "CLEAN_URL", "\"testintelesafe.covidhelp.in\"" // 13.232.32.249:8080
+        debug {
+            buildConfigField "String", "BASE_URL", "\"http://testintelesafe.covidhelp.in/\""
+            // http://13.232.32.249:8080/
+            buildConfigField "String", "CLEAN_URL", "\"testintelesafe.covidhelp.in\""
+            // 13.232.32.249:8080
         }
 
 
@@ -39,8 +41,10 @@ android {
                 checkReleaseBuilds false
             }
             minifyEnabled true
-            buildConfigField "String", "BASE_URL", "\"http://testintelesafe.covidhelp.in/\"" // http://13.232.32.249:8080/
-            buildConfigField "String", "CLEAN_URL", "\"testintelesafe.covidhelp.in\"" // 13.232.32.249:8080
+            buildConfigField "String", "BASE_URL", "\"http://testintelesafe.covidhelp.in/\""
+            // http://13.232.32.249:8080/
+            buildConfigField "String", "CLEAN_URL", "\"testintelesafe.covidhelp.in\""
+            // 13.232.32.249:8080
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
