--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,9 +6,9 @@ android {
         applicationId "org.intelehealth.intelesafe"
         minSdkVersion 19
         targetSdkVersion 28
-        versionCode 5
+        versionCode 7
         buildToolsVersion('28.0.3')
-        versionName "1.2-2"
+        versionName "1.3"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         //Change this to true to enable multidex support for Kitkat
         multiDexEnabled true
