--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,9 +122,9 @@ dependencies {
     implementation "com.google.firebase:firebase-messaging:17.3.4"
     implementation 'com.google.firebase:firebase-crash:16.2.1'
 
-//    implementation('com.github.SandroMachado:restaurant:0.2.0@aar') {
-//        transitive = true
-//    }
+
+    implementation 'com.facebook.android:facebook-android-sdk:[5,6)' //facebook sdk
+
 }
 apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle plugin
 
