--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,9 +6,9 @@ android {
         applicationId "org.intelehealth.intelesafe"
         minSdkVersion 19
         targetSdkVersion 29
-        versionCode 7
+        versionCode 10
         buildToolsVersion('29.0.2')
-        versionName "1.3"
+        versionName "1.3.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         //Change this to true to enable multidex support for Kitkat
         multiDexEnabled true
@@ -28,9 +28,9 @@ android {
         //Test CLEAN_URL = testintelesafe.covidhelp.in
 
         debug{
-            buildConfigField "String", "BASE_URL", "\"http://testintelesafe.covidhelp.in/\"" // http://13.232.32.249:8080/
+            buildConfigField "String", "BASE_URL", "\"https://testintelesafe.covidhelp.in/\"" // http://13.232.32.249:8080/
             buildConfigField "String", "CLEAN_URL", "\"testintelesafe.covidhelp.in\"" // 13.232.32.249:8080
-
+//            https://testssl.covidhelp.in/pulldata
         }
 
 
@@ -41,8 +41,8 @@ android {
             }
             minifyEnabled true
 
-            buildConfigField "String", "BASE_URL", "\"http://testintelesafe.covidhelp.in/\"" // http://13.232.32.249:8080/
-            buildConfigField "String", "CLEAN_URL", "\"testintelesafe.covidhelp.in\"" // 13.232.32.249:8080
+            buildConfigField "String", "BASE_URL", "\"https://intelesafe.covidhelp.in/\"" // http://13.232.32.249:8080/
+            buildConfigField "String", "CLEAN_URL", "\"intelesafe.covidhelp.in\"" // 13.232.32.249:8080
 
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
