--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activities.homeActivity.Webview"></activity>
+        <activity android:name=".activities.homeActivity.Card_Guidelines"></activity>
+        <activity android:name=".activities.homeActivity.Webview" />
 
         <receiver
             android:name=".activities.homeActivity.DeviceBootReceiver"
@@ -224,7 +225,7 @@
         <meta-data
             android:name="firebase_crashlytics_collection_enabled"
             android:value="true" />
-      
+
         <provider
             android:name=".activities.searchPatientActivity.SearchSuggestionProvider"
             android:authorities="org.intelehealth.intelesafe.activities.searchPatientActivity.SearchSuggestionProvider"
