--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activities.homeActivity.Card_Guidelines"></activity>
+        <activity android:name=".activities.CardGuidelines.Card_Guidelines"></activity>
         <activity android:name=".activities.homeActivity.Webview" />
 
         <receiver
