Back Button and White action bar is added.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activities.CardGuidelines.Card_Guidelines"></activity>
+
+        <activity android:name=".activities.CardGuidelines.Card_Guidelines"
+            android:label="Card Guidelines"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
         <activity android:name=".activities.homeActivity.Webview" />
 
         <receiver
