--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,12 +24,7 @@
     <uses-feature
         android:name="android.hardware.camera.autofocus"
         android:required="false" />
-    <uses-feature
-        android:name="android.hardware.camera"
-        android:required="true" />
-    <uses-feature
-        android:name="android.hardware.camera.autofocus"
-        android:required="false" />
+
 
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
@@ -58,20 +53,18 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
 
-        //Facebook SDK...
+<!--        fb sdk-->
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id"/>
 
-       <!-- Prajwal: Disable automatically logged events: Like if any crash occurs in Facebook's SDK then
-        when the app is restarted, a report is generated and sent to Facebook to help them imporve their
-        SDK...-->
-        <!--<meta-data
+<!--        Fb App Events: Auto-Logging of events is enabled...-->
+        <meta-data
             android:name="com.facebook.sdk.AutoLogAppEventsEnabled"
-            android:value="false"/>-->
+            android:value="true"/>
 
 
-        <activity android:name=".activities.homeActivity.Webview"></activity>
+        <activity android:name=".activities.homeActivity.Webview" />
 
         <receiver
             android:name=".activities.homeActivity.DeviceBootReceiver"
