--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         jcenter()
         maven { url 'http://jitpack.io' }
         maven { url 'http://maven.fabric.io/public' }
+        mavenCentral() //to download the facebook sdk from the maven central repo.
         
     }
     dependencies {
