--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,9 +6,9 @@ android {
         applicationId "org.intelehealth.intelesafe"
         minSdkVersion 19
         targetSdkVersion 29
-        versionCode 10
+        versionCode 11
         buildToolsVersion('29.0.2')
-        versionName "1.3.2"
+        versionName "1.3.2-1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         //Change this to true to enable multidex support for Kitkat
         multiDexEnabled true
