--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'io.fabric'
 android {
     compileSdkVersion 29
     defaultConfig {
@@ -117,10 +116,10 @@ dependencies {
     implementation 'com.github.hotchemi:permissionsdispatcher:2.3.2'
     annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.3.2'
 
-    implementation "com.crashlytics.sdk.android:crashlytics:2.9.9"
-    implementation "com.google.firebase:firebase-core:16.0.7"
-    implementation "com.google.firebase:firebase-messaging:17.3.4"
-    implementation 'com.google.firebase:firebase-crash:16.2.1'
+    implementation 'com.google.firebase:firebase-crashlytics:17.2.2'
+    implementation 'com.google.firebase:firebase-analytics:18.0.0'
+    implementation "com.google.firebase:firebase-core:17.4.3"
+    implementation "com.google.firebase:firebase-messaging:20.2.1"
 
     //facebook sdk
     implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
