--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,6 @@ buildscript {
         google()
         jcenter()
         maven { url 'http://jitpack.io' }
-        maven { url 'http://maven.fabric.io/public' }
         mavenCentral() //to download the facebook sdk from the maven central repo.
         
     }
@@ -14,8 +13,9 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         // Add the following line:
-        classpath 'com.google.gms:google-services:4.2.0'  // Google Services plugin
-        classpath 'io.fabric.tools:gradle:1.31.2'
+        classpath 'com.google.gms:google-services:4.3.4'  // Google Services plugin
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.3.0'
+
     }
 }
 
@@ -25,7 +25,6 @@ allprojects {
         jcenter()
         maven { url 'http://jitpack.io' }
         maven { url 'http://maven.google.com' }
-        maven { url 'http://maven.fabric.io/public' }
 
         mavenCentral() //to download the facebook sdk from the maven central repo.
 
