--- a/build.gradle
+++ b/build.gradle
@@ -4,18 +4,21 @@ buildscript {
         google()
         jcenter()
         maven { url 'http://jitpack.io' }
-        mavenCentral() //to download the facebook sdk from the maven central repo.
+        maven { url 'http://maven.fabric.io/public' }
         
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.3'
-        
+        classpath 'com.android.tools.build:gradle:4.1.1'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         // Add the following line:
         classpath 'com.google.gms:google-services:4.3.4'  // Google Services plugin
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.3.0'
 
+        classpath 'com.google.gms:google-services:4.2.0'  // Google Services plugin
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.1.0'
     }
 }
 
@@ -25,8 +28,7 @@ allprojects {
         jcenter()
         maven { url 'http://jitpack.io' }
         maven { url 'http://maven.google.com' }
-
-        mavenCentral() //to download the facebook sdk from the maven central repo.
+        maven { url 'http://maven.fabric.io/public' }
 
     }
 }
