Added web-rtc module

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -277,6 +277,14 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+        <receiver
+            android:name=".utilities.RTCMessageReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="org.intelehealth.intelesafe.RTC_MESSAGING_EVENT" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
