--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,9 +10,9 @@ android {
         applicationId "org.intelehealth.intelesafe"
         minSdkVersion 19
         targetSdkVersion 30
-        versionCode 11
+        versionCode 1
         buildToolsVersion('29.0.2')
-        versionName "1.3.2-1"
+        versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         //Change this to true to enable multidex support for Kitkat
         multiDexEnabled true
