Added reset password functionality

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
 //        http://testintelesafe2.covidhelp.in/
         debug{
             buildConfigField "String", "BASE_URL", "\"https://intelesafe.intelehealth.org/\"" // http://13.232.32.249:8080/
-            buildConfigField "String", "CLEAN_URL", "\"intelesafe.intelehealth.org\"" // 13.232.32.249:8080
+            buildConfigField "String", "CLEAN_URL", "\"trainingss.intelehealth.org\"" // 13.232.32.249:8080
 //            https://testssl.covidhelp.in/pulldata
         }
 
