--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" /> <!-- added support to lenova tab 2 -->
+
     <uses-feature
         android:name="android.hardware.camera.autofocus"
         android:required="false" />
@@ -29,11 +30,11 @@
     <application
         android:name=".app.IntelehealthApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher_splash_login"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/swasth_sampark"
         android:largeHeap="true"
         android:networkSecurityConfig="@xml/network_security_configuration"
-        android:roundIcon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
